stepping down due to a higher term seen in a heartbeat should not discard term after stepdown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.6.3, 3.7.1
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • v3.6
    • Repl 2017-04-17, Repl 2017-05-08, Repl 2017-05-29, Repl 2017-06-19, Repl 2017-07-31, Repl 2017-08-21, Repl 2017-09-11, Repl 2017-10-02, Repl 2017-10-23, Repl 2018-01-15, Repl 2018-01-29
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A step down due to higher term currently does not retain the higher term. This requires another heartbeat or metadata update (e.g.. during oplog fetching) to update the term again.

            Assignee:
            Siyuan Zhou
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: