SERVER-28290 Stepping down due to a higher term seen in a heartbeat should not discard term after stepdown.

(cherry picked from commit f496011618ba7b1a99e6d9e51bea6966341cfd12)